exports[`Model spec Args where args 1`] = `
Array [
  Object {
    "attribute": "_id",
    "graphQLType": "Int",
    "name": "_id",
    "type": "equal",
  },
  Object {
    "attribute": "_id",
    "graphQLType": "Int",
    "name": "_idNotEqual",
    "type": "notEqual",
  },
  Object {
    "attribute": "_id",
    "graphQLType": "Int",
    "name": "_idIn",
    "type": "in",
  },
  Object {
    "attribute": "_id",
    "graphQLType": "Int",
    "name": "_idNotIn",
    "type": "notIn",
  },
  Object {
    "attribute": "_id",
    "graphQLType": "Int",
    "name": "_idIsNull",
    "type": "isNull",
  },
  Object {
    "attribute": "_id",
    "graphQLType": "Int",
    "name": "_idIsNotNull",
    "type": "isNotNull",
  },
  Object {
    "attribute": "name",
    "graphQLType": "String",
    "name": "name",
    "type": "equal",
  },
  Object {
    "attribute": "name",
    "graphQLType": "String",
    "name": "nameNotEqual",
    "type": "notEqual",
  },
  Object {
    "attribute": "name",
    "graphQLType": "String",
    "name": "nameIn",
    "type": "in",
  },
  Object {
    "attribute": "name",
    "graphQLType": "String",
    "name": "nameNotIn",
    "type": "notIn",
  },
  Object {
    "attribute": "name",
    "graphQLType": "String",
    "name": "nameIsNull",
    "type": "isNull",
  },
  Object {
    "attribute": "name",
    "graphQLType": "String",
    "name": "nameIsNotNull",
    "type": "isNotNull",
  },
  Object {
    "attribute": "name",
    "graphQLType": "String",
    "name": "nameContains",
    "type": "contains",
  },
  Object {
    "attribute": "name",
    "graphQLType": "String",
    "name": "nameNotContains",
    "type": "notContains",
  },
  Object {
    "attribute": "name",
    "graphQLType": "String",
    "name": "nameStartsWith",
    "type": "startsWith",
  },
  Object {
    "attribute": "name",
    "graphQLType": "String",
    "name": "nameNotStartsWith",
    "type": "notStartsWith",
  },
  Object {
    "attribute": "name",
    "graphQLType": "String",
    "name": "nameEndsWith",
    "type": "endsWith",
  },
  Object {
    "attribute": "name",
    "graphQLType": "String",
    "name": "nameNotEndsWith",
    "type": "notEndsWith",
  },
  Object {
    "attribute": "name",
    "graphQLType": "String",
    "name": "nameLike",
    "type": "like",
  },
  Object {
    "attribute": "name",
    "graphQLType": "String",
    "name": "nameNotLike",
    "type": "notLike",
  },
  Object {
    "attribute": "age",
    "graphQLType": "Int",
    "name": "age",
    "type": "equal",
  },
  Object {
    "attribute": "age",
    "graphQLType": "Int",
    "name": "ageNotEqual",
    "type": "notEqual",
  },
  Object {
    "attribute": "age",
    "graphQLType": "Int",
    "name": "ageIn",
    "type": "in",
  },
  Object {
    "attribute": "age",
    "graphQLType": "Int",
    "name": "ageNotIn",
    "type": "notIn",
  },
  Object {
    "attribute": "age",
    "graphQLType": "Int",
    "name": "ageIsNull",
    "type": "isNull",
  },
  Object {
    "attribute": "age",
    "graphQLType": "Int",
    "name": "ageIsNotNull",
    "type": "isNotNull",
  },
  Object {
    "attribute": "Weight",
    "graphQLType": "Float",
    "name": "Weight",
    "type": "equal",
  },
  Object {
    "attribute": "Weight",
    "graphQLType": "Float",
    "name": "WeightNotEqual",
    "type": "notEqual",
  },
  Object {
    "attribute": "Weight",
    "graphQLType": "Float",
    "name": "WeightIn",
    "type": "in",
  },
  Object {
    "attribute": "Weight",
    "graphQLType": "Float",
    "name": "WeightNotIn",
    "type": "notIn",
  },
  Object {
    "attribute": "Weight",
    "graphQLType": "Float",
    "name": "WeightIsNull",
    "type": "isNull",
  },
  Object {
    "attribute": "Weight",
    "graphQLType": "Float",
    "name": "WeightIsNotNull",
    "type": "isNotNull",
  },
  Object {
    "attribute": "birthday",
    "graphQLType": "String",
    "name": "birthday",
    "type": "equal",
  },
  Object {
    "attribute": "birthday",
    "graphQLType": "String",
    "name": "birthdayNotEqual",
    "type": "notEqual",
  },
  Object {
    "attribute": "birthday",
    "graphQLType": "String",
    "name": "birthdayIn",
    "type": "in",
  },
  Object {
    "attribute": "birthday",
    "graphQLType": "String",
    "name": "birthdayNotIn",
    "type": "notIn",
  },
  Object {
    "attribute": "birthday",
    "graphQLType": "String",
    "name": "birthdayIsNull",
    "type": "isNull",
  },
  Object {
    "attribute": "birthday",
    "graphQLType": "String",
    "name": "birthdayIsNotNull",
    "type": "isNotNull",
  },
  Object {
    "attribute": "isCat",
    "graphQLType": "Boolean",
    "name": "isCat",
    "type": "equal",
  },
  Object {
    "attribute": "isCat",
    "graphQLType": "Boolean",
    "name": "isCatNotEqual",
    "type": "notEqual",
  },
  Object {
    "attribute": "isCat",
    "graphQLType": "Boolean",
    "name": "isCatIsNull",
    "type": "isNull",
  },
  Object {
    "attribute": "isCat",
    "graphQLType": "Boolean",
    "name": "isCatIsNotNull",
    "type": "isNotNull",
  },
  Object {
    "attribute": "id",
    "graphQLType": "ID",
    "name": "id",
    "type": "equal",
  },
  Object {
    "attribute": "id",
    "graphQLType": "ID",
    "name": "idNotEqual",
    "type": "notEqual",
  },
  Object {
    "attribute": "id",
    "graphQLType": "ID",
    "name": "idIn",
    "type": "in",
  },
  Object {
    "attribute": "id",
    "graphQLType": "ID",
    "name": "idNotIn",
    "type": "notIn",
  },
  Object {
    "attribute": "id",
    "graphQLType": "ID",
    "name": "idIsNull",
    "type": "isNull",
  },
  Object {
    "attribute": "id",
    "graphQLType": "ID",
    "name": "idIsNotNull",
    "type": "isNotNull",
  },
]
`;

exports[`Model spec Args where args 2`] = `
Array [
  Object {
    "attribute": "_id",
    "graphQLType": "Int",
    "name": "_id",
    "type": "equal",
  },
  Object {
    "attribute": "_id",
    "graphQLType": "Int",
    "name": "_idNotEqual",
    "type": "notEqual",
  },
  Object {
    "attribute": "_id",
    "graphQLType": "Int",
    "name": "_idIn",
    "type": "in",
  },
  Object {
    "attribute": "_id",
    "graphQLType": "Int",
    "name": "_idNotIn",
    "type": "notIn",
  },
  Object {
    "attribute": "_id",
    "graphQLType": "Int",
    "name": "_idIsNull",
    "type": "isNull",
  },
  Object {
    "attribute": "_id",
    "graphQLType": "Int",
    "name": "_idIsNotNull",
    "type": "isNotNull",
  },
  Object {
    "attribute": "owner",
    "graphQLType": "Float",
    "name": "owner",
    "type": "equal",
  },
  Object {
    "attribute": "owner",
    "graphQLType": "Float",
    "name": "ownerNotEqual",
    "type": "notEqual",
  },
  Object {
    "attribute": "owner",
    "graphQLType": "Float",
    "name": "ownerIn",
    "type": "in",
  },
  Object {
    "attribute": "owner",
    "graphQLType": "Float",
    "name": "ownerNotIn",
    "type": "notIn",
  },
  Object {
    "attribute": "owner",
    "graphQLType": "Float",
    "name": "ownerIsNull",
    "type": "isNull",
  },
  Object {
    "attribute": "owner",
    "graphQLType": "Float",
    "name": "ownerIsNotNull",
    "type": "isNotNull",
  },
  Object {
    "attribute": "animals",
    "graphQLType": "Int",
    "name": "animalsIn",
    "type": "in",
  },
  Object {
    "attribute": "animals",
    "graphQLType": "Int",
    "name": "animalsNotIn",
    "type": "notIn",
  },
  Object {
    "attribute": "animals",
    "graphQLType": "Int",
    "name": "animalsIsNull",
    "type": "isNull",
  },
  Object {
    "attribute": "animals",
    "graphQLType": "Int",
    "name": "animalsIsNotNull",
    "type": "isNotNull",
  },
  Object {
    "attribute": "id",
    "graphQLType": "ID",
    "name": "id",
    "type": "equal",
  },
  Object {
    "attribute": "id",
    "graphQLType": "ID",
    "name": "idNotEqual",
    "type": "notEqual",
  },
  Object {
    "attribute": "id",
    "graphQLType": "ID",
    "name": "idIn",
    "type": "in",
  },
  Object {
    "attribute": "id",
    "graphQLType": "ID",
    "name": "idNotIn",
    "type": "notIn",
  },
  Object {
    "attribute": "id",
    "graphQLType": "ID",
    "name": "idIsNull",
    "type": "isNull",
  },
  Object {
    "attribute": "id",
    "graphQLType": "ID",
    "name": "idIsNotNull",
    "type": "isNotNull",
  },
]
`;

exports[`Model spec Creation Type animal creation type 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "_id",
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "name",
      "type": "String",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "age",
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "Weight",
      "type": "Float",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "birthday",
      "type": "String",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "isCat",
      "type": "Boolean",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "id",
      "type": "ID",
    },
  ],
  "name": "CreateAnimalInput",
  "type": "GraphQLInputObjectType",
}
`;

exports[`Model spec Creation Type post creation type 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "_id",
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "createOwner",
      "type": Object {
        "description": undefined,
        "fields": Array [
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "key",
            "type": "Float",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "name",
            "type": Object {
              "of": "String",
              "type": "GraphQLNonNull",
            },
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "createPets",
            "type": Object {
              "of": Object {
                "description": undefined,
                "fields": Array [
                  Object {
                    "defaultValue": undefined,
                    "description": undefined,
                    "name": "_id",
                    "type": "Int",
                  },
                  Object {
                    "defaultValue": undefined,
                    "description": undefined,
                    "name": "name",
                    "type": "String",
                  },
                  Object {
                    "defaultValue": undefined,
                    "description": undefined,
                    "name": "age",
                    "type": "Int",
                  },
                  Object {
                    "defaultValue": undefined,
                    "description": undefined,
                    "name": "Weight",
                    "type": "Float",
                  },
                  Object {
                    "defaultValue": undefined,
                    "description": undefined,
                    "name": "birthday",
                    "type": "String",
                  },
                  Object {
                    "defaultValue": undefined,
                    "description": undefined,
                    "name": "isCat",
                    "type": "Boolean",
                  },
                  Object {
                    "defaultValue": undefined,
                    "description": undefined,
                    "name": "id",
                    "type": "ID",
                  },
                ],
                "name": "CreateAnimalInput",
                "type": "GraphQLInputObjectType",
              },
              "type": "GraphQLList",
            },
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "pets",
            "type": Object {
              "of": "Int",
              "type": "GraphQLList",
            },
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "id",
            "type": "ID",
          },
        ],
        "name": "CreateuserInput",
        "type": "GraphQLInputObjectType",
      },
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "owner",
      "type": "Float",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "createAnimals",
      "type": Object {
        "of": Object {
          "description": undefined,
          "fields": Array [
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "_id",
              "type": "Int",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "name",
              "type": "String",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "age",
              "type": "Int",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "Weight",
              "type": "Float",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "birthday",
              "type": "String",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "isCat",
              "type": "Boolean",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "id",
              "type": "ID",
            },
          ],
          "name": "CreateAnimalInput",
          "type": "GraphQLInputObjectType",
        },
        "type": "GraphQLList",
      },
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "animals",
      "type": Object {
        "of": "Int",
        "type": "GraphQLList",
      },
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "id",
      "type": "ID",
    },
  ],
  "name": "CreatePostInput",
  "type": "GraphQLInputObjectType",
}
`;

exports[`Model spec Creation Type user creation type 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "key",
      "type": "Float",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "name",
      "type": Object {
        "of": "String",
        "type": "GraphQLNonNull",
      },
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "createPets",
      "type": Object {
        "of": Object {
          "description": undefined,
          "fields": Array [
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "_id",
              "type": "Int",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "name",
              "type": "String",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "age",
              "type": "Int",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "Weight",
              "type": "Float",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "birthday",
              "type": "String",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "isCat",
              "type": "Boolean",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "id",
              "type": "ID",
            },
          ],
          "name": "CreateAnimalInput",
          "type": "GraphQLInputObjectType",
        },
        "type": "GraphQLList",
      },
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "pets",
      "type": Object {
        "of": "Int",
        "type": "GraphQLList",
      },
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "id",
      "type": "ID",
    },
  ],
  "name": "CreateuserInput",
  "type": "GraphQLInputObjectType",
}
`;

exports[`Model spec Mutations create mutation 1`] = `
Object {
  "args": Array [
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "type": Object {
        "of": Object {
          "description": undefined,
          "fields": Array [
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "_id",
              "type": "Int",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "name",
              "type": "String",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "age",
              "type": "Int",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "Weight",
              "type": "Float",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "birthday",
              "type": "String",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "isCat",
              "type": "Boolean",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "id",
              "type": "ID",
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "name": "clientMutationId",
              "type": "String",
            },
          ],
          "name": "AnimalCreateMutationInput",
          "type": "GraphQLInputObjectType",
        },
        "type": "GraphQLNonNull",
      },
    },
  ],
  "deprecationReason": undefined,
  "description": undefined,
  "resolve": "function",
  "type": Object {
    "description": undefined,
    "fields": Array [
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": undefined,
        "isDeprecated": false,
        "name": "animal",
        "resolve": "undefined",
        "type": Object {
          "description": undefined,
          "fields": Array [
            Object {
              "args": Array [],
              "deprecationReason": undefined,
              "description": undefined,
              "isDeprecated": false,
              "name": "_id",
              "resolve": "undefined",
              "type": "Int",
            },
            Object {
              "args": Array [],
              "deprecationReason": undefined,
              "description": undefined,
              "isDeprecated": false,
              "name": "name",
              "resolve": "undefined",
              "type": "String",
            },
            Object {
              "args": Array [],
              "deprecationReason": undefined,
              "description": undefined,
              "isDeprecated": false,
              "name": "age",
              "resolve": "undefined",
              "type": "Int",
            },
            Object {
              "args": Array [],
              "deprecationReason": undefined,
              "description": undefined,
              "isDeprecated": false,
              "name": "Weight",
              "resolve": "undefined",
              "type": "Float",
            },
            Object {
              "args": Array [],
              "deprecationReason": undefined,
              "description": undefined,
              "isDeprecated": false,
              "name": "birthday",
              "resolve": "undefined",
              "type": "String",
            },
            Object {
              "args": Array [],
              "deprecationReason": undefined,
              "description": undefined,
              "isDeprecated": false,
              "name": "isCat",
              "resolve": "undefined",
              "type": "Boolean",
            },
            Object {
              "args": Array [],
              "deprecationReason": undefined,
              "description": undefined,
              "isDeprecated": false,
              "name": "id",
              "resolve": "undefined",
              "type": "ID",
            },
          ],
          "interfaces": Array [],
          "name": "Animal",
          "type": "GraphQLObjectType",
        },
      },
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": undefined,
        "isDeprecated": false,
        "name": "clientMutationId",
        "resolve": "undefined",
        "type": "String",
      },
    ],
    "interfaces": Array [],
    "name": "AnimalCreateMutationPayload",
    "type": "GraphQLObjectType",
  },
}
`;

exports[`Model spec Queries Query connection 1`] = `
Object {
  "args": Array [
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "type": "String",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "type": "String",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "type": Object {
        "description": undefined,
        "fields": Array [
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "_id",
            "type": "Int",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "_idNotEqual",
            "type": "Int",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "_idIn",
            "type": "Int",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "_idNotIn",
            "type": "Int",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "_idIsNull",
            "type": "Int",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "_idIsNotNull",
            "type": "Int",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "name",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameNotEqual",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameIn",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameNotIn",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameIsNull",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameIsNotNull",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameContains",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameNotContains",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameStartsWith",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameNotStartsWith",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameEndsWith",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameNotEndsWith",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameLike",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "nameNotLike",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "age",
            "type": "Int",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "ageNotEqual",
            "type": "Int",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "ageIn",
            "type": "Int",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "ageNotIn",
            "type": "Int",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "ageIsNull",
            "type": "Int",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "ageIsNotNull",
            "type": "Int",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "Weight",
            "type": "Float",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "WeightNotEqual",
            "type": "Float",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "WeightIn",
            "type": "Float",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "WeightNotIn",
            "type": "Float",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "WeightIsNull",
            "type": "Float",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "WeightIsNotNull",
            "type": "Float",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "birthday",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "birthdayNotEqual",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "birthdayIn",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "birthdayNotIn",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "birthdayIsNull",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "birthdayIsNotNull",
            "type": "String",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "isCat",
            "type": "Boolean",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "isCatNotEqual",
            "type": "Boolean",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "isCatIsNull",
            "type": "Boolean",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "isCatIsNotNull",
            "type": "Boolean",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "id",
            "type": "ID",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "idNotEqual",
            "type": "ID",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "idIn",
            "type": "ID",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "idNotIn",
            "type": "ID",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "idIsNull",
            "type": "ID",
          },
          Object {
            "defaultValue": undefined,
            "description": undefined,
            "name": "idIsNotNull",
            "type": "ID",
          },
        ],
        "name": "AnimalWhereInput",
        "type": "GraphQLInputObjectType",
      },
    },
  ],
  "deprecationReason": undefined,
  "description": undefined,
  "resolve": "function",
  "type": Object {
    "description": "A connection to a list of items.",
    "fields": Array [
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": "Information to aid in pagination.",
        "isDeprecated": false,
        "name": "pageInfo",
        "resolve": "undefined",
        "type": Object {
          "of": Object {
            "description": "Information about pagination in a connection.",
            "fields": Array [
              Object {
                "args": Array [],
                "deprecationReason": undefined,
                "description": "When paginating forwards, are there more items?",
                "isDeprecated": false,
                "name": "hasNextPage",
                "resolve": "undefined",
                "type": Object {
                  "of": "Boolean",
                  "type": "GraphQLNonNull",
                },
              },
              Object {
                "args": Array [],
                "deprecationReason": undefined,
                "description": "When paginating backwards, are there more items?",
                "isDeprecated": false,
                "name": "hasPreviousPage",
                "resolve": "undefined",
                "type": Object {
                  "of": "Boolean",
                  "type": "GraphQLNonNull",
                },
              },
              Object {
                "args": Array [],
                "deprecationReason": undefined,
                "description": "When paginating backwards, the cursor to continue.",
                "isDeprecated": false,
                "name": "startCursor",
                "resolve": "undefined",
                "type": "String",
              },
              Object {
                "args": Array [],
                "deprecationReason": undefined,
                "description": "When paginating forwards, the cursor to continue.",
                "isDeprecated": false,
                "name": "endCursor",
                "resolve": "undefined",
                "type": "String",
              },
            ],
            "interfaces": Array [],
            "name": "PageInfo",
            "type": "GraphQLObjectType",
          },
          "type": "GraphQLNonNull",
        },
      },
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": "A list of edges.",
        "isDeprecated": false,
        "name": "edges",
        "resolve": "undefined",
        "type": Object {
          "of": Object {
            "description": "An edge in a connection.",
            "fields": Array [
              Object {
                "args": Array [],
                "deprecationReason": undefined,
                "description": "The item at the end of the edge",
                "isDeprecated": false,
                "name": "node",
                "resolve": "undefined",
                "type": Object {
                  "description": undefined,
                  "fields": Array [
                    Object {
                      "args": Array [],
                      "deprecationReason": undefined,
                      "description": undefined,
                      "isDeprecated": false,
                      "name": "_id",
                      "resolve": "undefined",
                      "type": "Int",
                    },
                    Object {
                      "args": Array [],
                      "deprecationReason": undefined,
                      "description": undefined,
                      "isDeprecated": false,
                      "name": "name",
                      "resolve": "undefined",
                      "type": "String",
                    },
                    Object {
                      "args": Array [],
                      "deprecationReason": undefined,
                      "description": undefined,
                      "isDeprecated": false,
                      "name": "age",
                      "resolve": "undefined",
                      "type": "Int",
                    },
                    Object {
                      "args": Array [],
                      "deprecationReason": undefined,
                      "description": undefined,
                      "isDeprecated": false,
                      "name": "Weight",
                      "resolve": "undefined",
                      "type": "Float",
                    },
                    Object {
                      "args": Array [],
                      "deprecationReason": undefined,
                      "description": undefined,
                      "isDeprecated": false,
                      "name": "birthday",
                      "resolve": "undefined",
                      "type": "String",
                    },
                    Object {
                      "args": Array [],
                      "deprecationReason": undefined,
                      "description": undefined,
                      "isDeprecated": false,
                      "name": "isCat",
                      "resolve": "undefined",
                      "type": "Boolean",
                    },
                    Object {
                      "args": Array [],
                      "deprecationReason": undefined,
                      "description": undefined,
                      "isDeprecated": false,
                      "name": "id",
                      "resolve": "undefined",
                      "type": "ID",
                    },
                  ],
                  "interfaces": Array [],
                  "name": "Animal",
                  "type": "GraphQLObjectType",
                },
              },
              Object {
                "args": Array [],
                "deprecationReason": undefined,
                "description": "A cursor for use in pagination",
                "isDeprecated": false,
                "name": "cursor",
                "resolve": "undefined",
                "type": Object {
                  "of": "String",
                  "type": "GraphQLNonNull",
                },
              },
            ],
            "interfaces": Array [],
            "name": "AnimalEdge",
            "type": "GraphQLObjectType",
          },
          "type": "GraphQLList",
        },
      },
    ],
    "interfaces": Array [],
    "name": "AnimalConnection",
    "type": "GraphQLObjectType",
  },
}
`;

exports[`Model spec Queries Query one 1`] = `
Object {
  "args": Array [
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "type": Object {
        "of": "Int",
        "type": "GraphQLNonNull",
      },
    },
  ],
  "deprecationReason": undefined,
  "description": undefined,
  "resolve": "function",
  "type": Object {
    "description": undefined,
    "fields": Array [
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": undefined,
        "isDeprecated": false,
        "name": "_id",
        "resolve": "undefined",
        "type": "Int",
      },
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": undefined,
        "isDeprecated": false,
        "name": "name",
        "resolve": "undefined",
        "type": "String",
      },
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": undefined,
        "isDeprecated": false,
        "name": "age",
        "resolve": "undefined",
        "type": "Int",
      },
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": undefined,
        "isDeprecated": false,
        "name": "Weight",
        "resolve": "undefined",
        "type": "Float",
      },
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": undefined,
        "isDeprecated": false,
        "name": "birthday",
        "resolve": "undefined",
        "type": "String",
      },
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": undefined,
        "isDeprecated": false,
        "name": "isCat",
        "resolve": "undefined",
        "type": "Boolean",
      },
      Object {
        "args": Array [],
        "deprecationReason": undefined,
        "description": undefined,
        "isDeprecated": false,
        "name": "id",
        "resolve": "undefined",
        "type": "ID",
      },
    ],
    "interfaces": Array [],
    "name": "Animal",
    "type": "GraphQLObjectType",
  },
}
`;

exports[`Model spec WhereInput type 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "_id",
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "_idNotEqual",
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "_idIn",
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "_idNotIn",
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "_idIsNull",
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "_idIsNotNull",
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "owner",
      "type": "Float",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "ownerNotEqual",
      "type": "Float",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "ownerIn",
      "type": "Float",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "ownerNotIn",
      "type": "Float",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "ownerIsNull",
      "type": "Float",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "ownerIsNotNull",
      "type": "Float",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "animalsIn",
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "animalsNotIn",
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "animalsIsNull",
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "animalsIsNotNull",
      "type": "Int",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "id",
      "type": "ID",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "idNotEqual",
      "type": "ID",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "idIn",
      "type": "ID",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "idNotIn",
      "type": "ID",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "idIsNull",
      "type": "ID",
    },
    Object {
      "defaultValue": undefined,
      "description": undefined,
      "name": "idIsNotNull",
      "type": "ID",
    },
  ],
  "name": "PostWhereInput",
  "type": "GraphQLInputObjectType",
}
`;

exports[`Model spec base type when generate base type with scalar attributes, should return equals 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "_id",
      "resolve": "undefined",
      "type": "Int",
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "name",
      "resolve": "undefined",
      "type": "String",
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "age",
      "resolve": "undefined",
      "type": "Int",
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "Weight",
      "resolve": "undefined",
      "type": "Float",
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "birthday",
      "resolve": "undefined",
      "type": "String",
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "isCat",
      "resolve": "undefined",
      "type": "Boolean",
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "id",
      "resolve": "undefined",
      "type": "ID",
    },
  ],
  "interfaces": Array [],
  "name": "Animal",
  "type": "GraphQLObjectType",
}
`;

exports[`Model spec base type when generate base type with sub-model, should generate sub model 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "key",
      "resolve": "undefined",
      "type": "Float",
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "name",
      "resolve": "undefined",
      "type": "String",
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "pets",
      "resolve": "function",
      "type": Object {
        "description": "A connection to a list of items.",
        "fields": Array [
          Object {
            "args": Array [],
            "deprecationReason": undefined,
            "description": "Information to aid in pagination.",
            "isDeprecated": false,
            "name": "pageInfo",
            "resolve": "undefined",
            "type": Object {
              "of": Object {
                "description": "Information about pagination in a connection.",
                "fields": Array [
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "When paginating forwards, are there more items?",
                    "isDeprecated": false,
                    "name": "hasNextPage",
                    "resolve": "undefined",
                    "type": Object {
                      "of": "Boolean",
                      "type": "GraphQLNonNull",
                    },
                  },
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "When paginating backwards, are there more items?",
                    "isDeprecated": false,
                    "name": "hasPreviousPage",
                    "resolve": "undefined",
                    "type": Object {
                      "of": "Boolean",
                      "type": "GraphQLNonNull",
                    },
                  },
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "When paginating backwards, the cursor to continue.",
                    "isDeprecated": false,
                    "name": "startCursor",
                    "resolve": "undefined",
                    "type": "String",
                  },
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "When paginating forwards, the cursor to continue.",
                    "isDeprecated": false,
                    "name": "endCursor",
                    "resolve": "undefined",
                    "type": "String",
                  },
                ],
                "interfaces": Array [],
                "name": "PageInfo",
                "type": "GraphQLObjectType",
              },
              "type": "GraphQLNonNull",
            },
          },
          Object {
            "args": Array [],
            "deprecationReason": undefined,
            "description": "A list of edges.",
            "isDeprecated": false,
            "name": "edges",
            "resolve": "undefined",
            "type": Object {
              "of": Object {
                "description": "An edge in a connection.",
                "fields": Array [
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "The item at the end of the edge",
                    "isDeprecated": false,
                    "name": "node",
                    "resolve": "undefined",
                    "type": Object {
                      "description": undefined,
                      "fields": Array [
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "_id",
                          "resolve": "undefined",
                          "type": "Int",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "name",
                          "resolve": "undefined",
                          "type": "String",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "age",
                          "resolve": "undefined",
                          "type": "Int",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "Weight",
                          "resolve": "undefined",
                          "type": "Float",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "birthday",
                          "resolve": "undefined",
                          "type": "String",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "isCat",
                          "resolve": "undefined",
                          "type": "Boolean",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "id",
                          "resolve": "undefined",
                          "type": "ID",
                        },
                      ],
                      "interfaces": Array [],
                      "name": "Animal",
                      "type": "GraphQLObjectType",
                    },
                  },
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "A cursor for use in pagination",
                    "isDeprecated": false,
                    "name": "cursor",
                    "resolve": "undefined",
                    "type": Object {
                      "of": "String",
                      "type": "GraphQLNonNull",
                    },
                  },
                ],
                "interfaces": Array [],
                "name": "AnimalEdge",
                "type": "GraphQLObjectType",
              },
              "type": "GraphQLList",
            },
          },
        ],
        "interfaces": Array [],
        "name": "AnimalConnection",
        "type": "GraphQLObjectType",
      },
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "id",
      "resolve": "undefined",
      "type": "ID",
    },
  ],
  "interfaces": Array [],
  "name": "user",
  "type": "GraphQLObjectType",
}
`;

exports[`Model spec base type when model required few times, need generate one time only 1`] = `
Object {
  "description": undefined,
  "fields": Array [
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "_id",
      "resolve": "undefined",
      "type": "Int",
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "owner",
      "resolve": "function",
      "type": Object {
        "description": undefined,
        "fields": Array [
          Object {
            "args": Array [],
            "deprecationReason": undefined,
            "description": undefined,
            "isDeprecated": false,
            "name": "key",
            "resolve": "undefined",
            "type": "Float",
          },
          Object {
            "args": Array [],
            "deprecationReason": undefined,
            "description": undefined,
            "isDeprecated": false,
            "name": "name",
            "resolve": "undefined",
            "type": "String",
          },
          Object {
            "args": Array [],
            "deprecationReason": undefined,
            "description": undefined,
            "isDeprecated": false,
            "name": "pets",
            "resolve": "function",
            "type": Object {
              "description": "A connection to a list of items.",
              "fields": Array [
                Object {
                  "args": Array [],
                  "deprecationReason": undefined,
                  "description": "Information to aid in pagination.",
                  "isDeprecated": false,
                  "name": "pageInfo",
                  "resolve": "undefined",
                  "type": Object {
                    "of": Object {
                      "description": "Information about pagination in a connection.",
                      "fields": Array [
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": "When paginating forwards, are there more items?",
                          "isDeprecated": false,
                          "name": "hasNextPage",
                          "resolve": "undefined",
                          "type": Object {
                            "of": "Boolean",
                            "type": "GraphQLNonNull",
                          },
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": "When paginating backwards, are there more items?",
                          "isDeprecated": false,
                          "name": "hasPreviousPage",
                          "resolve": "undefined",
                          "type": Object {
                            "of": "Boolean",
                            "type": "GraphQLNonNull",
                          },
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": "When paginating backwards, the cursor to continue.",
                          "isDeprecated": false,
                          "name": "startCursor",
                          "resolve": "undefined",
                          "type": "String",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": "When paginating forwards, the cursor to continue.",
                          "isDeprecated": false,
                          "name": "endCursor",
                          "resolve": "undefined",
                          "type": "String",
                        },
                      ],
                      "interfaces": Array [],
                      "name": "PageInfo",
                      "type": "GraphQLObjectType",
                    },
                    "type": "GraphQLNonNull",
                  },
                },
                Object {
                  "args": Array [],
                  "deprecationReason": undefined,
                  "description": "A list of edges.",
                  "isDeprecated": false,
                  "name": "edges",
                  "resolve": "undefined",
                  "type": Object {
                    "of": Object {
                      "description": "An edge in a connection.",
                      "fields": Array [
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": "The item at the end of the edge",
                          "isDeprecated": false,
                          "name": "node",
                          "resolve": "undefined",
                          "type": Object {
                            "description": undefined,
                            "fields": Array [
                              Object {
                                "args": Array [],
                                "deprecationReason": undefined,
                                "description": undefined,
                                "isDeprecated": false,
                                "name": "_id",
                                "resolve": "undefined",
                                "type": "Int",
                              },
                              Object {
                                "args": Array [],
                                "deprecationReason": undefined,
                                "description": undefined,
                                "isDeprecated": false,
                                "name": "name",
                                "resolve": "undefined",
                                "type": "String",
                              },
                              Object {
                                "args": Array [],
                                "deprecationReason": undefined,
                                "description": undefined,
                                "isDeprecated": false,
                                "name": "age",
                                "resolve": "undefined",
                                "type": "Int",
                              },
                              Object {
                                "args": Array [],
                                "deprecationReason": undefined,
                                "description": undefined,
                                "isDeprecated": false,
                                "name": "Weight",
                                "resolve": "undefined",
                                "type": "Float",
                              },
                              Object {
                                "args": Array [],
                                "deprecationReason": undefined,
                                "description": undefined,
                                "isDeprecated": false,
                                "name": "birthday",
                                "resolve": "undefined",
                                "type": "String",
                              },
                              Object {
                                "args": Array [],
                                "deprecationReason": undefined,
                                "description": undefined,
                                "isDeprecated": false,
                                "name": "isCat",
                                "resolve": "undefined",
                                "type": "Boolean",
                              },
                              Object {
                                "args": Array [],
                                "deprecationReason": undefined,
                                "description": undefined,
                                "isDeprecated": false,
                                "name": "id",
                                "resolve": "undefined",
                                "type": "ID",
                              },
                            ],
                            "interfaces": Array [],
                            "name": "Animal",
                            "type": "GraphQLObjectType",
                          },
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": "A cursor for use in pagination",
                          "isDeprecated": false,
                          "name": "cursor",
                          "resolve": "undefined",
                          "type": Object {
                            "of": "String",
                            "type": "GraphQLNonNull",
                          },
                        },
                      ],
                      "interfaces": Array [],
                      "name": "AnimalEdge",
                      "type": "GraphQLObjectType",
                    },
                    "type": "GraphQLList",
                  },
                },
              ],
              "interfaces": Array [],
              "name": "AnimalConnection",
              "type": "GraphQLObjectType",
            },
          },
          Object {
            "args": Array [],
            "deprecationReason": undefined,
            "description": undefined,
            "isDeprecated": false,
            "name": "id",
            "resolve": "undefined",
            "type": "ID",
          },
        ],
        "interfaces": Array [],
        "name": "user",
        "type": "GraphQLObjectType",
      },
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "animals",
      "resolve": "function",
      "type": Object {
        "description": "A connection to a list of items.",
        "fields": Array [
          Object {
            "args": Array [],
            "deprecationReason": undefined,
            "description": "Information to aid in pagination.",
            "isDeprecated": false,
            "name": "pageInfo",
            "resolve": "undefined",
            "type": Object {
              "of": Object {
                "description": "Information about pagination in a connection.",
                "fields": Array [
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "When paginating forwards, are there more items?",
                    "isDeprecated": false,
                    "name": "hasNextPage",
                    "resolve": "undefined",
                    "type": Object {
                      "of": "Boolean",
                      "type": "GraphQLNonNull",
                    },
                  },
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "When paginating backwards, are there more items?",
                    "isDeprecated": false,
                    "name": "hasPreviousPage",
                    "resolve": "undefined",
                    "type": Object {
                      "of": "Boolean",
                      "type": "GraphQLNonNull",
                    },
                  },
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "When paginating backwards, the cursor to continue.",
                    "isDeprecated": false,
                    "name": "startCursor",
                    "resolve": "undefined",
                    "type": "String",
                  },
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "When paginating forwards, the cursor to continue.",
                    "isDeprecated": false,
                    "name": "endCursor",
                    "resolve": "undefined",
                    "type": "String",
                  },
                ],
                "interfaces": Array [],
                "name": "PageInfo",
                "type": "GraphQLObjectType",
              },
              "type": "GraphQLNonNull",
            },
          },
          Object {
            "args": Array [],
            "deprecationReason": undefined,
            "description": "A list of edges.",
            "isDeprecated": false,
            "name": "edges",
            "resolve": "undefined",
            "type": Object {
              "of": Object {
                "description": "An edge in a connection.",
                "fields": Array [
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "The item at the end of the edge",
                    "isDeprecated": false,
                    "name": "node",
                    "resolve": "undefined",
                    "type": Object {
                      "description": undefined,
                      "fields": Array [
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "_id",
                          "resolve": "undefined",
                          "type": "Int",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "name",
                          "resolve": "undefined",
                          "type": "String",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "age",
                          "resolve": "undefined",
                          "type": "Int",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "Weight",
                          "resolve": "undefined",
                          "type": "Float",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "birthday",
                          "resolve": "undefined",
                          "type": "String",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "isCat",
                          "resolve": "undefined",
                          "type": "Boolean",
                        },
                        Object {
                          "args": Array [],
                          "deprecationReason": undefined,
                          "description": undefined,
                          "isDeprecated": false,
                          "name": "id",
                          "resolve": "undefined",
                          "type": "ID",
                        },
                      ],
                      "interfaces": Array [],
                      "name": "Animal",
                      "type": "GraphQLObjectType",
                    },
                  },
                  Object {
                    "args": Array [],
                    "deprecationReason": undefined,
                    "description": "A cursor for use in pagination",
                    "isDeprecated": false,
                    "name": "cursor",
                    "resolve": "undefined",
                    "type": Object {
                      "of": "String",
                      "type": "GraphQLNonNull",
                    },
                  },
                ],
                "interfaces": Array [],
                "name": "AnimalEdge",
                "type": "GraphQLObjectType",
              },
              "type": "GraphQLList",
            },
          },
        ],
        "interfaces": Array [],
        "name": "AnimalConnection",
        "type": "GraphQLObjectType",
      },
    },
    Object {
      "args": Array [],
      "deprecationReason": undefined,
      "description": undefined,
      "isDeprecated": false,
      "name": "id",
      "resolve": "undefined",
      "type": "ID",
    },
  ],
  "interfaces": Array [],
  "name": "Post",
  "type": "GraphQLObjectType",
}
`;
